adding new project mocearuPension to my portfolio

--- a/en.index.html
+++ b/en.index.html
@@ -157,6 +157,66 @@
         </h2>
 
         <!-- Each .row is a project -->
+        <!-- Pensiunea Mocearu -->
+        <div class="row">
+          <div class="col-lg-4 col-sm-12">
+            <div class="project-wrapper__text wow animate__fadeInLeft">
+              <h3 class="project-wrapper__text-title">Hotel/Villa/Pension Website </h3>
+              <div>
+                <p class="mb-4">
+                  My new website build is here.
+                  This website was built with HTML&CSS, JQuerry, Boostrap, JavaScript and a lot more. It is a theme with a clean and modern design and ofcourse 100% responsive.
+                  Check it out live!
+                </p>
+              </div>
+              <a target="_blank" class="cta-btn projects-btn" href="https://pensiuneamocearu.ro/">
+                See Live
+              </a>
+              <a target="_blank" class="cta-btn text-color-main hidden-btn" href="#!">
+                Source Code
+              </a>
+            </div>
+          </div>
+          <div class="col-lg-8 col-sm-12">
+            <div class="project-wrapper__image wow animate__fadeIn">
+              <div data-tilt class="thumbnail rounded">
+                <img class="img-fluid" src="img/mocearuproject.jpg" alt="Olteanu Claudiu Image Project" />
+              </div>
+            </div>
+          </div>
+        </div>
+
+        <!-- Each .row is a project -->
+        <!-- Olteanu Claudiu -->
+        <div class="row">
+          <div class="col-lg-4 col-sm-12">
+            <div class="project-wrapper__text wow animate__fadeInLeft">
+              <h3 class="project-wrapper__text-title">CV - Resume Template </h3>
+              <div>
+                <p class="mb-4">
+                  This website was created with HTML&CSS, JQuerry, Boostrap and JavaScript. It is a theme with a clean and
+                  modern design, 100% responsive, which means that it is displayed properly on all types of devices. <br>
+                  Working on this project I had the opportunity to implement everything I had learned so far.
+                </p>
+              </div>
+              <a target="_blank" class="cta-btn projects-btn" href="https://www.olteanuclaudiu.ro/">
+                See Live
+              </a>
+              <a target="_blank" class="cta-btn text-color-main hidden-btn" href="#!">
+                Source Code
+              </a>
+            </div>
+          </div>
+          <div class="col-lg-8 col-sm-12">
+            <div class="project-wrapper__image wow animate__fadeIn">
+              <div class="thumbnail rounded">
+                <img class="img-fluid" src="img/olteanuclaudiuProject-min.png" alt="Olteanu Claudiu Image Project" />
+              </div>
+            </div>
+          </div>
+        </div>
+
+        <!-- Each .row is a project -->
         <!-- Omul Modern -->
         <div class="row">
           <div class="col-lg-4 col-sm-12">
@@ -187,17 +247,20 @@
         </div>
 
         <!-- Each .row is a project -->
-        <!-- Olteanu Claudiu -->
+        <!-- Tudor Marian -->
         <div class="row">
           <div class="col-lg-4 col-sm-12">
             <div class="project-wrapper__text wow animate__fadeInLeft">
-              <h3 class="project-wrapper__text-title">CV - Resume Template </h3>
+              <h3 class="project-wrapper__text-title">My Own Portfolio</h3>
               <div>
                 <p class="mb-4">
-                  This website was created with HTML&CSS, JQuerry, Boostrap and JavaScript. It is a theme with a clean and modern design, 100% responsive, which means that it is displayed properly on all types of devices. <br> Working on this project I had the opportunity to implement everything I had learned so far.
+                  This theme was created with <i class="fas fa-heart"></i> using HTML&CSS, Boostrap, JQuerry, Git & GitHub,
+                  Command Line and JavaScript libraries. It is a theme inspired by the <a
+                    href="https://github.com/cobidev/simplefolio" target="_blank"><mark>Simplefolio</mark></a> project created
+                  by <a href="https://github.com/cobidev" target="_blank"><mark>Jacob Martinez</mark></a>.
                 </p>
               </div>
-              <a target="_blank" class="cta-btn projects-btn" href="https://www.olteanuclaudiu.ro/">
+              <a class="cta-btn projects-btn" href="https://omulmodern.ro/">
                 See Live
               </a>
               <a target="_blank" class="cta-btn text-color-main hidden-btn" href="#!">
@@ -207,13 +270,12 @@
           </div>
           <div class="col-lg-8 col-sm-12">
             <div class="project-wrapper__image wow animate__fadeIn">
-              <div class="thumbnail rounded">
-                <img class="img-fluid" src="img/olteanuclaudiuProject-min.png" alt="Olteanu Claudiu Image Project"/>
+              <div data-tilt class="thumbnail rounded">
+                <img class="img-fluid" src="img/myportfolioProject-min.png" alt="Personal Portfolio Image Project" />
               </div>
             </div>
           </div>
         </div>
-        <!-- /END Project -->
 
         <!-- Each .row is a project -->
         <!-- Sebastian Moldovan -->
@@ -223,8 +285,8 @@
               <h3 class="project-wrapper__text-title">Corporate Template - Barber Shop</h3>
               <div>
                 <p class="mb-4">
-                  This is my first website ever built after I've decided to learn on my own about programming.
-                   This theme was created using raw HTML&CSS and a little bit of JavaScript. It is a theme with a clean and modern design, 100% Responsive. <br> Working on this project I have learnt the basics of front-end web development.
+                  This is my first website ever built after I've decided to learn on my own about programming. It is a theme with a clean and modern design, 100% Responsive. <br> Working on this project I have learnt the basics of front-end web development.
+                   This Website is not online anymore as Sebastian changed his career.
                 </p>
               </div>
               <a style="display: none;" target="_blank" class="cta-btn projects-btn" href="https://sebastianmoldovan.com/">
@@ -239,34 +301,6 @@
             <div class="project-wrapper__image wow animate__fadeIn">
               <div class="thumbnail rounded">
                 <img class="img-fluid" src="img/sebastianmoldovanProject-min.png" alt="Sebastian Moldovan Image Project"/>
-              </div>
-            </div>
-          </div>
-        </div>
-
-        <!-- Each .row is a project -->
-        <!-- Tudor Marian -->
-        <div class="row">
-          <div class="col-lg-4 col-sm-12">
-            <div class="project-wrapper__text wow animate__fadeInLeft">
-              <h3 class="project-wrapper__text-title">My Own Portfolio</h3>
-              <div>
-                <p class="mb-4">
-                  This theme was created with <i class="fas fa-heart"></i> using HTML&CSS, Boostrap, JQuerry, Git & GitHub, Command Line and JavaScript libraries. It is a theme inspired by the <a href="https://github.com/cobidev/simplefolio" target="_blank"><mark>Simplefolio</mark></a> project created by <a href="https://github.com/cobidev" target="_blank"><mark>Jacob Martinez</mark></a>.
-                </p>
-              </div>
-              <a class="cta-btn projects-btn" href="https://omulmodern.ro/">
-                See Live
-              </a>
-              <a target="_blank" class="cta-btn text-color-main hidden-btn" href="#!">
-                Source Code
-              </a>
-            </div>
-          </div>
-          <div class="col-lg-8 col-sm-12">
-            <div class="project-wrapper__image wow animate__fadeIn">
-              <div data-tilt class="thumbnail rounded">
-                <img class="img-fluid" src="img/myportfolioProject-min.png" alt="Personal Portfolio Image Project"/>
               </div>
             </div>
           </div>
