--- a/index.html
+++ b/index.html
@@ -173,6 +173,66 @@
         </h2>
 
         <!-- Each .row is a project -->
+        <!-- Pensiunea Mocearu -->
+        <div class="row">
+          <div class="col-lg-4 col-sm-12">
+            <div class="project-wrapper__text wow animate__fadeInLeft">
+              <h3 class="project-wrapper__text-title">Hotel/Villa/Pension Website </h3>
+              <div>
+                <p class="mb-4">
+                  Cel mai nou proiect este aici.
+                  Website creat cu HTML&CSS, JQuerry, Boostrap, JavaScript și multe altele. Este o temă cu un design curat și
+                  modern, bineînțeles 100% responsive.
+                </p>
+              </div>
+              <a target="_blank" class="cta-btn projects-btn" href="https://pensiuneamocearu.ro/">
+                See Live
+              </a>
+              <a target="_blank" class="cta-btn text-color-main hidden-btn" href="#!">
+                Source Code
+              </a>
+            </div>
+          </div>
+          <div class="col-lg-8 col-sm-12">
+            <div class="project-wrapper__image wow animate__fadeIn">
+              <div data-tilt class="thumbnail rounded">
+                <img class="img-fluid" src="img/mocearuproject.jpg" alt="Olteanu Claudiu Image Project" />
+              </div>
+            </div>
+          </div>
+        </div>
+
+        <!-- Each .row is a project -->
+        <!-- Olteanu Claudiu -->
+        <div class="row">
+          <div class="col-lg-4 col-sm-12">
+            <div class="project-wrapper__text wow animate__fadeInLeft">
+              <h3 class="project-wrapper__text-title">CV - Rezumat - Portofoliu Website </h3>
+              <div>
+                <p class="mb-4">
+                  Acest website este creat cu HTML&CSS, JQuerry, Boostrap și JavaScript. Este o temă cu un design curat și
+                  modern, 100% responsive, ceea ce înseamnă că este afișată corespunzător pe toate tipurile de dispozitive. <br>
+                  Lucrând la acest proiect am avut oportunitatea să pun în aplicare tot ce am învățat până în acel moment.
+                </p>
+              </div>
+              <a target="_blank" class="cta-btn projects-btn" href="https://www.olteanuclaudiu.ro/">
+                See Live
+              </a>
+              <a target="_blank" class="cta-btn text-color-main hidden-btn" href="#!">
+                Source Code
+              </a>
+            </div>
+          </div>
+          <div class="col-lg-8 col-sm-12">
+            <div class="project-wrapper__image wow animate__fadeIn">
+              <div data-tilt class="thumbnail rounded">
+                <img class="img-fluid" src="img/olteanuclaudiuProject-min.png" alt="Olteanu Claudiu Image Project" />
+              </div>
+            </div>
+          </div>
+        </div>
+
+        <!-- Each .row is a project -->
         <!-- Omul Modern -->
         <div class="row">
           <div class="col-lg-4 col-sm-12">
@@ -203,63 +263,6 @@
         </div>
 
         <!-- Each .row is a project -->
-        <!-- Olteanu Claudiu -->
-        <div class="row">
-          <div class="col-lg-4 col-sm-12">
-            <div class="project-wrapper__text wow animate__fadeInLeft">
-              <h3 class="project-wrapper__text-title">CV - Rezumat - Portofoliu Website </h3>
-              <div>
-                <p class="mb-4">
-                   Acest website este creat cu HTML&CSS, JQuerry, Boostrap și JavaScript. Este o temă cu un design curat și modern, 100% responsive, ceea ce înseamnă că este afișată corespunzător pe toate tipurile de dispozitive. <br> Lucrând la acest proiect am avut oportunitatea să pun în aplicare tot ce am învățat până în acel moment.
-                </p>
-              </div>
-              <a target="_blank" class="cta-btn projects-btn" href="https://www.olteanuclaudiu.ro/">
-                See Live
-              </a>
-              <a target="_blank" class="cta-btn text-color-main hidden-btn" href="#!">
-                Source Code
-              </a>
-            </div>
-          </div>
-          <div class="col-lg-8 col-sm-12">
-            <div class="project-wrapper__image wow animate__fadeIn">
-              <div data-tilt class="thumbnail rounded">
-                <img class="img-fluid" src="img/olteanuclaudiuProject-min.png" alt="Olteanu Claudiu Image Project"/>
-              </div>
-            </div>
-          </div>
-        </div>
-        <!-- /END Project -->
-
-        <!-- Each .row is a project -->
-        <!-- Sebastian Moldovan -->
-        <div class="row">
-          <div class="col-lg-4 col-sm-12">
-            <div class="project-wrapper__text wow animate__fadeInLeft">
-              <h3 class="project-wrapper__text-title">Corporate Template - BarberShop</h3>
-              <div>
-                <p class="mb-4">
-                  Acesta este primul meu site web construit vreodată după ce am decis să învăț singur despre programare. Această temă a fost creată folosind doar HTML&CSS și un pic de JavaScript. Este o temă cu un design curat și modern, 100% Responsive. <br> Lucrând la acest proiect, am învățat elementele de bază ale programării în front-end web development.
-                </p>
-              </div>
-              <a style="display: none;" target="_blank" class="cta-btn projects-btn" href="https://sebastianmoldovan.com/">
-                See Live
-              </a>
-              <a target="_blank" class="cta-btn text-color-main hidden-btn" href="#!">
-                Source Code
-              </a>
-            </div>
-          </div>
-          <div class="col-lg-8 col-sm-12">
-            <div class="project-wrapper__image wow animate__fadeIn">
-              <div data-tilt class="thumbnail rounded">
-                <img class="img-fluid" src="img/sebastianmoldovanProject-min.png" alt="Sebastian Moldovan Image Project"/>
-              </div>
-            </div>
-          </div>
-        </div>
-
-        <!-- Each .row is a project -->
         <!-- Tudor Marian -->
         <div class="row">
           <div class="col-lg-4 col-sm-12">
@@ -282,6 +285,37 @@
             <div class="project-wrapper__image wow animate__fadeIn">
               <div data-tilt class="thumbnail rounded">
                 <img class="img-fluid" src="img/myportfolioProject-min.png" alt="Tudor Marian Image Project"/>
+              </div>
+            </div>
+          </div>
+        </div>
+
+        <!-- Each .row is a project -->
+        <!-- Sebastian Moldovan -->
+        <div class="row">
+          <div class="col-lg-4 col-sm-12">
+            <div class="project-wrapper__text wow animate__fadeInLeft">
+              <h3 class="project-wrapper__text-title">Corporate Template - BarberShop</h3>
+              <div>
+                <p class="mb-4">
+                  Acesta este primul meu site web construit vreodată după ce am decis să învăț singur despre programare. Este o temă cu un design curat și modern,
+                  100% Responsive. <br> Lucrând la acest proiect, am învățat elementele de bază ale programării în front-end web
+                  development.
+                  Acest website nu mai este online întrucât Sebastian s-a reprofilat.
+                </p>
+              </div>
+              <a style="display: none;" target="_blank" class="cta-btn projects-btn" href="https://sebastianmoldovan.com/">
+                See Live
+              </a>
+              <a target="_blank" class="cta-btn text-color-main hidden-btn" href="#!">
+                Source Code
+              </a>
+            </div>
+          </div>
+          <div class="col-lg-8 col-sm-12">
+            <div class="project-wrapper__image wow animate__fadeIn">
+              <div data-tilt class="thumbnail rounded">
+                <img class="img-fluid" src="img/sebastianmoldovanProject-min.png" alt="Sebastian Moldovan Image Project" />
               </div>
             </div>
           </div>
